maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:30: error: ':' expected but ')' found.
def Numerotation(T){
                  ^JediEscaper:41: error: identifier expected but '}' found.
}
^